 * Fix: Make Apple Magic Trackpad and hopefully other touch pads work. Thanks Charmandrigo for reporting and helping figure this out.
 * Fix: Add a close button to the tablet tester, playback and event log dialogs so that it can be closed on Android and other systems without window decorations without having to press some button or key combination.

2023-11-12 Version 2.2.0-beta.10
 * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
 * Fix: Disable brush taking in 2.1 sessions. Thanks Blozzom for reporting.

2023-11-11 Version 2.2.0-beta.9
 * Fix: Make Android build work again. Thanks Tetriser for reporting.
 * Fix: Allow indirect mode in 2.1 sessions when opacity dynamics are disabled. Thanks to Blozzom for reporting.
 * Fix: Make LCH color wheel circle not look so bright and discontinuous.
 * Fix: Refresh canvas view harder on resize to avoid artifacts on some systems. Thanks xxxx for reporting.
 * Fix: Use proper background color in resize dialog. Thanks xxxx for reporting.
 * Fix: Correct a rounding error when converting pixels for display. This corrects both the visuals and the color picker when picking from the merged image. Thanks deovise and hipofiz for reporting.
 * Fix: Don't crash when a new user joins when using the builtin server and a local fork is present. Thanks to Kink for reporting.
 * Feature: Interpolate inputs that are far away from each other to compensate against fast strokes producing jagged curves. Can be disabled in the input preferences.
 * Fix: Make build directories outside of the source directory work again. Thanks Aquargent for reporting.
 * Fix: Properly handle modifier key releases for keyboard canvas shortcuts. Thanks Daystream for reporting.
 * Server Feature: Implement a shared bans system, letting owners of multiple servers manage a single list instead of having to keep them in sync manually. Thanks Bluestrings for suggesting.