@@ -8,6 +8,7 @@ Unreleased Version 2.2.0-pre
  * Fix: Default the mouse wheel to pan the canvas on macOS instead of zooming it, since that makes more sense for its two-dimensional scroll wheels. Thanks Charmandrigo for reporting.
  * Fix: Make Apple Magic Trackpad and hopefully other touch pads work. Thanks Charmandrigo for reporting and helping figure this out.
  * Fix: Add a close button to the tablet tester, playback and event log dialogs so that it can be closed on Android and other systems without window decorations without having to press some button or key combination.
+ * Fix: Enable fingerpainting on Android by default if the device doesn't have a stylus.
 
 2023-11-12 Version 2.2.0-beta.10
  * Fix: Don't deadlock on first startup. Thanks to Hail, lowontrash, FARBOL234, Dorokinyo and hamlin for reporting.
